<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/carImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/base_margins"
            android:layout_marginTop="@dimen/base_margins"
            android:contentDescription="@string/car_image_description"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toStartOf="@+id/modelTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_weight="1"
            tools:src="@drawable/car_img_placeholder" />

        <TextView
            android:id="@+id/modelTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margins"
            android:layout_marginEnd="@dimen/base_margins"
            android:textSize="@dimen/text_size_H4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/carImageView"
            app:layout_constraintTop_toTopOf="@+id/carImageView"
            app:layout_constraintHorizontal_weight="1"
            tools:text="MINI" />

        <TextView
            android:id="@+id/makeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_grid"
            android:textSize="@dimen/text_size_H2"
            app:layout_constraintStart_toStartOf="@+id/modelTextView"
            app:layout_constraintTop_toBottomOf="@+id/modelTextView"
            tools:text="BMW" />

        <TextView
            android:id="@+id/licencePlateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_grid"
            android:textSize="@dimen/text_size_H1"
            app:layout_constraintBottom_toBottomOf="@+id/carImageView"
            app:layout_constraintStart_toStartOf="@+id/makeTextView"
            app:layout_constraintTop_toBottomOf="@+id/makeTextView"
            tools:text="L-AE1025" />

        <ImageView
            android:id="@+id/transmissionImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margins"
            android:layout_marginBottom="@dimen/base_margins"
            android:contentDescription="@string/car_transmission_image_description"
            android:src="@drawable/ic_car_transmission"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/carImageView"
            app:layout_constraintTop_toBottomOf="@+id/carImageView" />

        <TextView
            android:id="@+id/transmissionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_grid"
            android:textSize="@dimen/text_size_H0"
            app:layout_constraintBottom_toBottomOf="@+id/transmissionImageView"
            app:layout_constraintLeft_toRightOf="@+id/transmissionImageView"
            app:layout_constraintTop_toTopOf="@+id/transmissionImageView"
            tools:text="Automatic" />

        <ImageView
            android:id="@+id/fuelImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margins"
            android:contentDescription="@string/car_fuel_image_description"
            android:src="@drawable/ic_fuel"
            app:layout_constraintBottom_toBottomOf="@+id/transmissionImageView"
            app:layout_constraintLeft_toLeftOf="@+id/transmissionTextView"
            app:layout_constraintStart_toEndOf="@+id/transmissionTextView"
            app:layout_constraintTop_toTopOf="@+id/transmissionImageView" />

        <TextView
            android:id="@+id/fuelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_grid"
            android:textSize="@dimen/text_size_H0"
            app:layout_constraintBottom_toBottomOf="@+id/fuelImageView"
            app:layout_constraintLeft_toRightOf="@+id/fuelImageView"
            app:layout_constraintTop_toTopOf="@+id/fuelImageView"
            tools:text="Diesel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
